--- a/team_members.html
+++ b/team_members.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEAMMEMBERS</title>
     <link rel="stylesheet" href="css/team_members.css" />
+    <link rel="stylesheet" href="css/index.css"></link>
 </head>
 
 <body>
