백엔드 프로젝트로 변경

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -26,7 +26,7 @@
 
             <div class="header-nav-menu">
                 <div id="header-menu-img-area">
-                    <a href="index.html"><img id="header-menu-img" src="/img/dog_logo.png" alt="logo" ></a>
+                    <a href="index.html"><img id="header-menu-img" src="img/dog_logo.png" alt="logo" ></a>
                 </div>
                 <div class="header-menu-list">
                     <a class="header-menu" href="#">CLUB INFO</a>
@@ -37,7 +37,7 @@
                     <form action="#">
                         <input class="search-text" type="text">
                         <!-- <input class="search-btn" type="submit"> -->
-                        <input class="search-btn" type="image" src="../../img/btn_search.png" name="submit" value="submit">
+                        <input class="search-btn" type="image" src="img/btn_search.png" name="submit" value="submit">
                     </form>
                 </div>
             </div>
